deployment/aks/base/resource-server/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: resource-server
  namespace: reference-implementation
spec:
  replicas: 1
  selector:
    matchLabels:
      app: resource-server
  template:
    metadata:
      labels:
        app: resource-server
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      containers:
        - name: resource-server
          image: acrlypfelles.azurecr.io/no.lyse.plattform.oauth2-playground.resource-server:2.0.0-PR-5-SNAPSHOT
          args:
            - --spring.profiles.active=azure,dev
            - --spring.security.oauth2.resourceserver.jwt.issuer-uri=https://login.microsoftonline.com/22ca942f-06c2-4f38-9407-0e447dedbb67/v2.0
            - --server.port=8080
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: '1'
              memory: 1G
            limits:
              memory: 1G
