deployment/aks/base/resource-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: resource-server
  namespace: reference-implementation
spec:
  type: LoadBalancer
  ports:
    - targetPort: 8080
      name: port8080
      port: 8080
      protocol: TCP
  selector:
    app: resource-server
