deployment/aks/base/resource-server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: resource-server
  namespace: reference-implementation
spec:
  ingressClassName: traefik
  rules:
    - host: resource-server.dev.privatelink.westeurope.azmk8s.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: resource-server
                port:
                  number: 8080
